@@ -1,3 +1,8 @@
+2004-04-26	blytkerchan
+	* map_test.c: new file
+	* Makefile.am [TESTS]: add map_test
+	[map_test_LDADD]: new variable
+
 2004-04-16	blytkerchan
 	* array_test.c (array_test3): new function
 	(main): call array_test3
